# bazel-py-runtime-repro

./: .gitignore  BUILD  WORKSPACE.bazel  python3_data.sh  python3_wrapper.sh
